--- a/JenkinsSentinel/JenkinsSentinel.csproj
+++ b/JenkinsSentinel/JenkinsSentinel.csproj
@@ -92,6 +92,9 @@
     <Compile Include="Notification.xaml.cs">
       <DependentUpon>Notification.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Settings.xaml.cs">
+      <DependentUpon>Settings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="src\jenkinsdata\JenkinsWorkflow.cs" />
     <Compile Include="src\ISentinelEvents.cs" />
     <Compile Include="src\jenkinsinput\JenkinsInput.cs" />
@@ -142,6 +145,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Notification.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Settings.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
